@@ -11,9 +11,8 @@ import com.electronwill.nightconfig.core.ConfigSpec.CorrectionAction;
 import com.electronwill.nightconfig.core.ConfigSpec.CorrectionListener;
 import com.electronwill.nightconfig.core.EnumGetMethod;
 import com.electronwill.nightconfig.core.InMemoryFormat;
+import com.electronwill.nightconfig.core.UnmodifiableCommentedConfig;
 import com.electronwill.nightconfig.core.UnmodifiableConfig;
-import com.electronwill.nightconfig.core.file.FileConfig;
-import com.electronwill.nightconfig.core.utils.UnmodifiableConfigWrapper;
 import com.google.common.base.Joiner;
 import com.google.common.base.Preconditions;
 import com.google.common.base.Splitter;
@@ -22,6 +21,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
@@ -29,7 +29,9 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
 import java.util.function.BooleanSupplier;
+import java.util.function.Consumer;
 import java.util.function.DoubleSupplier;
 import java.util.function.Function;
 import java.util.function.IntSupplier;
@@ -39,33 +41,64 @@ import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import net.neoforged.fml.Logging;
 import net.neoforged.fml.config.IConfigSpec;
+import net.neoforged.fml.config.ModConfig;
 import net.neoforged.fml.loading.FMLEnvironment;
 import org.apache.commons.lang3.tuple.Pair;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.Nullable;
 
 /*
  * Like {@link com.electronwill.nightconfig.core.ConfigSpec} except in builder format, and extended to accept comments, language keys,
  * and other things mod configs would find useful.
  */
-public class ModConfigSpec extends UnmodifiableConfigWrapper<UnmodifiableConfig> implements IConfigSpec<ModConfigSpec>//TODO: Remove extends and pipe everything through getSpec/getValues?
-{
-    private Map<List<String>, String> levelComments;
-    private Map<List<String>, String> levelTranslationKeys;
+public class ModConfigSpec implements IConfigSpec {
+    /*
+     * Each config field (for example `category.subcategory.something`) has:
+     * - an associated ValueSpec which contains metadata about the field,
+     * - a ConfigValue which caches the value for the field.
+     * These are stored in `spec` and `values` respectively,
+     * (ab)using the tree structure of a Config.
+     *
+     * Intermediate levels cannot be represented inside a Config like that,
+     * so their metadata is stored in `levelComments` and `levelTranslationKeys`.
+     */
+    /**
+     * Stores the comments for intermediate levels.
+     */
+    private final Map<List<String>, String> levelComments;
+    /**
+     * Stores the translation keys for intermediate levels.
+     */
+    private final Map<List<String>, String> levelTranslationKeys;
 
-    private UnmodifiableConfig values;
-    private Config childConfig;
-
-    private boolean isCorrecting = false;
+    /**
+     * Stores the {@link ValueSpec}s, (ab)using the hierarchical structure of {@link Config}.
+     */
+    private final UnmodifiableConfig spec;
+    /**
+     * Stores the {@link ConfigValue}s, (ab)using the hierarchical structure of {@link Config}.
+     */
+    private final UnmodifiableConfig values;
+    /**
+     * The currently loaded config values.
+     */
+    @Nullable
+    private ILoadedConfig loadedConfig;
 
     private static final Logger LOGGER = LogManager.getLogger();
 
-    private ModConfigSpec(UnmodifiableConfig storage, UnmodifiableConfig values, Map<List<String>, String> levelComments, Map<List<String>, String> levelTranslationKeys) {
-        super(storage);
+    private ModConfigSpec(UnmodifiableConfig spec, UnmodifiableConfig values, Map<List<String>, String> levelComments, Map<List<String>, String> levelTranslationKeys) {
+        this.spec = spec;
         this.values = values;
         this.levelComments = levelComments;
         this.levelTranslationKeys = levelTranslationKeys;
+    }
+
+    @Override
+    public boolean isEmpty() {
+        return this.spec.isEmpty();
     }
 
     public String getLevelComment(List<String> path) {
@@ -76,92 +109,99 @@ public class ModConfigSpec extends UnmodifiableConfigWrapper<UnmodifiableConfig>
         return levelTranslationKeys.get(path);
     }
 
-    public void setConfig(CommentedConfig config) {
-        this.childConfig = config;
-        if (config != null && !isCorrect(config)) {
-            String configName = config instanceof FileConfig ? ((FileConfig) config).getNioPath().toString() : config.toString();
-            LOGGER.warn(Logging.CORE, "Configuration file {} is not correct. Correcting", configName);
-            correct(config,
+    @Override
+    public void acceptConfig(@Nullable ILoadedConfig config) {
+        this.loadedConfig = config;
+        if (config != null && !isCorrect(config.config())) {
+            // Correct in case the config did not get corrected before this function was called.
+            // This should not happen under normal circumstances, hence the warning.
+            LOGGER.warn(Logging.CORE, "Configuration {} is not correct. Correcting", config);
+            correct(config.config(),
                     (action, path, incorrectValue, correctedValue) -> LOGGER.warn(Logging.CORE, "Incorrect key {} was corrected from {} to its default, {}. {}", DOT_JOINER.join(path), incorrectValue, correctedValue, incorrectValue == correctedValue ? "This seems to be an error." : ""),
                     (action, path, incorrectValue, correctedValue) -> LOGGER.debug(Logging.CORE, "The comment on key {} does not match the spec. This may create a backup.", DOT_JOINER.join(path)));
 
-            if (config instanceof FileConfig) {
-                ((FileConfig) config).save();
-            }
+            config.save();
         }
         this.afterReload();
     }
 
     @Override
-    public void acceptConfig(final CommentedConfig data) {
-        setConfig(data);
-    }
-
-    public boolean isCorrecting() {
-        return isCorrecting;
+    public void validateSpec(ModConfig config) {
+        forEachValue(getValues().valueMap().values(), configValue -> {
+            if (!configValue.getSpec().restartType().isValid(config.getType())) {
+                throw new IllegalArgumentException("Configuration value " + String.join(".", configValue.getPath())
+                        + " defined in config " + config.getFileName() + " has restart of type " + configValue.getSpec().restartType() + " which cannot be used for configs of type " + config.getType());
+            }
+        });
     }
 
     public boolean isLoaded() {
-        return childConfig != null;
+        return loadedConfig != null;
     }
 
     public UnmodifiableConfig getSpec() {
-        return this.config;
+        return this.spec;
     }
 
     public UnmodifiableConfig getValues() {
         return this.values;
     }
 
-    public void afterReload() {
-        this.resetCaches(getValues().valueMap().values());
-    }
-
-    private void resetCaches(final Iterable<Object> configValues) {
+    private void forEachValue(Iterable<Object> configValues, Consumer<ConfigValue<?>> consumer) {
         configValues.forEach(value -> {
-            if (value instanceof ConfigValue) {
-                final ConfigValue<?> configValue = (ConfigValue<?>) value;
-                configValue.clearCache();
-            } else if (value instanceof Config) {
-                final Config innerConfig = (Config) value;
-                this.resetCaches(innerConfig.valueMap().values());
+            if (value instanceof ConfigValue<?> configValue) {
+                consumer.accept(configValue);
+            } else if (value instanceof Config innerConfig) {
+                forEachValue(innerConfig.valueMap().values(), consumer);
             }
         });
     }
 
+    public void afterReload() {
+        // Only clear the caches of configs that don't need a restart
+        this.resetCaches(RestartType.NONE);
+    }
+
+    @ApiStatus.Internal
+    public void resetCaches(RestartType restartType) {
+        forEachValue(getValues().valueMap().values(), configValue -> {
+            if (configValue.getSpec().restartType == restartType) {
+                configValue.clearCache();
+            }
+        });
+    }
+
+    /**
+     * Saves the current config values to the config file, and fires the config reloading event.
+     */
     public void save() {
-        Preconditions.checkNotNull(childConfig, "Cannot save config value without assigned Config object present");
-        if (childConfig instanceof FileConfig) {
-            ((FileConfig) childConfig).save();
-        }
+        Preconditions.checkNotNull(loadedConfig, "Cannot save config value without assigned Config object present");
+        loadedConfig.save();
     }
 
-    public synchronized boolean isCorrect(CommentedConfig config) {
+    @Override
+    public boolean isCorrect(UnmodifiableCommentedConfig config) {
         LinkedList<String> parentPath = new LinkedList<>();
-        return correct(this.config, config, parentPath, Collections.unmodifiableList(parentPath), (a, b, c, d) -> {}, null, true) == 0;
+        return correct(this.spec, config, parentPath, Collections.unmodifiableList(parentPath), (a, b, c, d) -> {}, null, true) == 0;
     }
 
-    public int correct(CommentedConfig config) {
-        return correct(config, (action, path, incorrectValue, correctedValue) -> {}, null);
+    public void correct(CommentedConfig config) {
+        correct(config, (action, path, incorrectValue, correctedValue) -> {}, null);
     }
 
-    public synchronized int correct(CommentedConfig config, CorrectionListener listener) {
+    public int correct(CommentedConfig config, CorrectionListener listener) {
         return correct(config, listener, null);
     }
 
-    public synchronized int correct(CommentedConfig config, CorrectionListener listener, CorrectionListener commentListener) {
+    public int correct(CommentedConfig config, CorrectionListener listener, @Nullable CorrectionListener commentListener) {
         LinkedList<String> parentPath = new LinkedList<>(); //Linked list for fast add/removes
-        int ret = -1;
-        try {
-            isCorrecting = true;
-            ret = correct(this.config, config, parentPath, Collections.unmodifiableList(parentPath), listener, commentListener, false);
-        } finally {
-            isCorrecting = false;
-        }
-        return ret;
+        return correct(this.spec, config, parentPath, Collections.unmodifiableList(parentPath), listener, commentListener, false);
     }
 
-    private int correct(UnmodifiableConfig spec, CommentedConfig config, LinkedList<String> parentPath, List<String> parentPathUnmodifiable, CorrectionListener listener, CorrectionListener commentListener, boolean dryRun) {
+    /**
+     * {@code config} will be downcast to {@link CommentedConfig} if {@code dryRun} is {@code false} and a modification needs to be made.
+     */
+    private int correct(UnmodifiableConfig spec, UnmodifiableCommentedConfig config, LinkedList<String> parentPath, List<String> parentPathUnmodifiable, CorrectionListener listener, @Nullable CorrectionListener commentListener, boolean dryRun) {
         int count = 0;
 
         Map<String, Object> specMap = spec.valueMap();
@@ -183,7 +223,7 @@ public class ModConfigSpec extends UnmodifiableConfigWrapper<UnmodifiableConfig>
                 } else if (dryRun) {
                     return 1;
                 } else {
-                    CommentedConfig newValue = config.createSubConfig();
+                    CommentedConfig newValue = ((CommentedConfig) config).createSubConfig();
                     configMap.put(key, newValue);
                     listener.onCorrect(action, parentPathUnmodifiable, configValue, newValue);
                     count++;
@@ -192,14 +232,14 @@ public class ModConfigSpec extends UnmodifiableConfigWrapper<UnmodifiableConfig>
 
                 String newComment = levelComments.get(parentPath);
                 String oldComment = config.getComment(key);
-                if (!stringsMatchIgnoringNewlines(oldComment, newComment)) {
+                if (!stringsMatchNormalizingNewLines(oldComment, newComment)) {
                     if (commentListener != null)
                         commentListener.onCorrect(action, parentPathUnmodifiable, oldComment, newComment);
 
                     if (dryRun)
                         return 1;
 
-                    config.setComment(key, newComment);
+                    ((CommentedConfig) config).setComment(key, newComment);
                 }
             } else {
                 ValueSpec valueSpec = (ValueSpec) specValue;
@@ -213,14 +253,14 @@ public class ModConfigSpec extends UnmodifiableConfigWrapper<UnmodifiableConfig>
                     count++;
                 }
                 String oldComment = config.getComment(key);
-                if (!stringsMatchIgnoringNewlines(oldComment, valueSpec.getComment())) {
+                if (!stringsMatchNormalizingNewLines(oldComment, valueSpec.getComment())) {
                     if (commentListener != null)
                         commentListener.onCorrect(action, parentPathUnmodifiable, oldComment, valueSpec.getComment());
 
                     if (dryRun)
                         return 1;
 
-                    config.setComment(key, valueSpec.getComment());
+                    ((CommentedConfig) config).setComment(key, valueSpec.getComment());
                 }
             }
 
@@ -244,25 +284,26 @@ public class ModConfigSpec extends UnmodifiableConfigWrapper<UnmodifiableConfig>
         return count;
     }
 
-    private boolean stringsMatchIgnoringNewlines(@Nullable Object obj1, @Nullable Object obj2) {
-        if (obj1 instanceof String string1 && obj2 instanceof String string2) {
-            if (string1.length() > 0 && string2.length() > 0) {
-                return string1.replaceAll("\r\n", "\n")
-                        .equals(string2.replaceAll("\r\n", "\n"));
-
-            }
+    private boolean stringsMatchNormalizingNewLines(@Nullable String string1, @Nullable String string2) {
+        boolean blank1 = string1 == null || string1.isBlank();
+        boolean blank2 = string2 == null || string2.isBlank();
+        if (blank1 != blank2) {
+            return false;
+        } else if (blank1 && blank2) {
+            return true;
+        } else {
+            return string1.replaceAll("\r\n", "\n")
+                    .equals(string2.replaceAll("\r\n", "\n"));
         }
-        // Fallback for when we're not given Strings, or one of them is empty
-        return Objects.equals(obj1, obj2);
     }
 
     public static class Builder {
-        private final Config storage = Config.of(LinkedHashMap::new, InMemoryFormat.withUniversalSupport()); // Use LinkedHashMap for consistent ordering
+        private final Config spec = Config.of(LinkedHashMap::new, InMemoryFormat.withUniversalSupport()); // Use LinkedHashMap for consistent ordering
         private BuilderContext context = new BuilderContext();
-        private Map<List<String>, String> levelComments = new HashMap<>();
-        private Map<List<String>, String> levelTranslationKeys = new HashMap<>();
-        private List<String> currentPath = new ArrayList<>();
-        private List<ConfigValue<?>> values = new ArrayList<>();
+        private final Map<List<String>, String> levelComments = new HashMap<>();
+        private final Map<List<String>, String> levelTranslationKeys = new HashMap<>();
+        private final List<String> currentPath = new ArrayList<>();
+        private final List<ConfigValue<?>> values = new ArrayList<>();
 
         //Object
         public <T> ConfigValue<T> define(String path, T defaultValue) {
@@ -302,7 +343,7 @@ public class ModConfigSpec extends UnmodifiableConfigWrapper<UnmodifiableConfig>
                 tmp.addAll(path);
                 path = tmp;
             }
-            storage.set(path, value);
+            spec.set(path, value);
             context = new BuilderContext();
             return new ConfigValue<>(this, path, defaultSupplier);
         }
@@ -344,63 +385,244 @@ public class ModConfigSpec extends UnmodifiableConfigWrapper<UnmodifiableConfig>
             return define(path, defaultSupplier, acceptableValues::contains);
         }
 
+        /**
+         * See {@link #defineList(List, Supplier, Supplier, Predicate)} for details.<p>
+         * 
+         * This variant takes its key as a string and splits it on ".".<br>
+         * This variant takes its default value directly and wraps it in a supplier.<br>
+         * This variant has no supplier for new elements, so no new elements can be added in the config UI.
+         * 
+         * @deprecated Use {@link #defineList(String, List, Supplier, Predicate)}
+         */
+        @Deprecated
         public <T> ConfigValue<List<? extends T>> defineList(String path, List<? extends T> defaultValue, Predicate<Object> elementValidator) {
             return defineList(split(path), defaultValue, elementValidator);
         }
 
+        /**
+         * See {@link #defineList(List, Supplier, Supplier, Predicate)} for details.<p>
+         * 
+         * This variant takes its key as a string and splits it on ".".<br>
+         * This variant takes its default value directly and wraps it in a supplier.
+         * 
+         */
+        public <T> ConfigValue<List<? extends T>> defineList(String path, List<? extends T> defaultValue, Supplier<T> newElementSupplier, Predicate<Object> elementValidator) {
+            return defineList(split(path), defaultValue, newElementSupplier, elementValidator);
+        }
+
+        /**
+         * See {@link #defineList(List, Supplier, Supplier, Predicate)} for details.<p>
+         * 
+         * This variant takes its key as a string and splits it on ".".<br>
+         * This variant has no supplier for new elements, so no new elements can be added in the config UI.
+         * 
+         * @deprecated Use {@link #defineList(String, Supplier, Supplier, Predicate)}
+         */
+        @Deprecated
         public <T> ConfigValue<List<? extends T>> defineList(String path, Supplier<List<? extends T>> defaultSupplier, Predicate<Object> elementValidator) {
             return defineList(split(path), defaultSupplier, elementValidator);
         }
 
+        /**
+         * See {@link #defineList(List, Supplier, Supplier, Predicate)} for details.<p>
+         * 
+         * This variant takes its key as a string and splits it on ".".
+         * 
+         */
+        public <T> ConfigValue<List<? extends T>> defineList(String path, Supplier<List<? extends T>> defaultSupplier, Supplier<T> newElementSupplier, Predicate<Object> elementValidator) {
+            return defineList(split(path), defaultSupplier, newElementSupplier, elementValidator);
+        }
+
+        /**
+         * See {@link #defineList(List, Supplier, Supplier, Predicate)} for details.<p>
+         * 
+         * This variant takes its default value directly and wraps it in a supplier.<br>
+         * This variant has no supplier for new elements, so no new elements can be added in the config UI.
+         * 
+         * @deprecated Use {@link #defineList(List, List, Supplier, Predicate)}
+         */
+        @Deprecated
         public <T> ConfigValue<List<? extends T>> defineList(List<String> path, List<? extends T> defaultValue, Predicate<Object> elementValidator) {
             return defineList(path, () -> defaultValue, elementValidator);
         }
 
-        public <T> ConfigValue<List<? extends T>> defineList(List<String> path, Supplier<List<? extends T>> defaultSupplier, Predicate<Object> elementValidator) {
-            context.setClazz(List.class);
-            return define(path, new ValueSpec(defaultSupplier, x -> x instanceof List && ((List<?>) x).stream().allMatch(elementValidator), context, path) {
-                @Override
-                public Object correct(Object value) {
-                    if (value == null || !(value instanceof List) || ((List<?>) value).isEmpty()) {
-                        LOGGER.debug(Logging.CORE, "List on key {} is deemed to need correction. It is null, not a list, or an empty list. Modders, consider defineListAllowEmpty?", path.get(path.size() - 1));
-                        return getDefault();
-                    }
-                    List<?> list = Lists.newArrayList((List<?>) value);
-                    list.removeIf(elementValidator.negate());
-                    if (list.isEmpty()) {
-                        LOGGER.debug(Logging.CORE, "List on key {} is deemed to need correction. It failed validation.", path.get(path.size() - 1));
-                        return getDefault();
-                    }
-                    return list;
-                }
-            }, defaultSupplier);
+        /**
+         * See {@link #defineList(List, Supplier, Supplier, Predicate)} for details.<p>
+         * 
+         * This variant takes its default value directly and wraps it in a supplier.
+         * 
+         */
+        public <T> ConfigValue<List<? extends T>> defineList(List<String> path, List<? extends T> defaultValue, Supplier<T> newElementSupplier, Predicate<Object> elementValidator) {
+            return defineList(path, () -> defaultValue, newElementSupplier, elementValidator);
         }
 
+        /**
+         * See {@link #defineList(List, Supplier, Supplier, Predicate)} for details.<p>
+         * 
+         * This variant has no supplier for new elements, so no new elements can be added in the config UI.
+         * 
+         * @deprecated Use {@link #defineList(List, Supplier, Supplier, Predicate)}
+         */
+        @Deprecated
+        public <T> ConfigValue<List<? extends T>> defineList(List<String> path, Supplier<List<? extends T>> defaultSupplier, Predicate<Object> elementValidator) {
+            return defineList(path, defaultSupplier, null, elementValidator);
+        }
+
+        /**
+         * Build a new config value that holds a {@link List}.<p>
+         * 
+         * This list cannot be empty. See also {@link #defineList(List, Supplier, Supplier, Predicate, Range)} for more control over the list size.
+         * 
+         * @param <T>                The class of element of the list. Directly supported are {@link String}, {@link Boolean}, {@link Integer}, {@link Long} and {@link Double}.
+         *                           Other classes will be saved using their string representation and will be read back from the config file as strings.
+         * @param path               The key for the config value in list form, i.e. pre-split into section and key.
+         * @param defaultSupplier    A {@link Supplier} for the default value of the list. This will be used if the config file doesn't exist or if it reads as invalid.
+         * @param newElementSupplier A {@link Supplier} for new elements to be added to the list. This is only used in the UI when the user presses the "add" button.
+         *                           The supplied value doesn't have to validate as correct, but it should provide a good starting point for the user to make it correct.
+         *                           If this parameter is null, there will be no "add" button in the UI (if the default UI is used).
+         * @param elementValidator   A {@link Predicate} to verify if a list element is valid. Elements that are read from the config file are removed from the list if the
+         *                           validator rejects them.
+         * @return A {@link ConfigValue} object that can be used to access the config value and that will live-update if the value changed, i.e. because the config file
+         *         was updated or the config UI was used.
+         */
+        public <T> ConfigValue<List<? extends T>> defineList(List<String> path, Supplier<List<? extends T>> defaultSupplier, Supplier<T> newElementSupplier, Predicate<Object> elementValidator) {
+            return defineList(path, defaultSupplier, newElementSupplier, elementValidator, new Range<Integer>(Integer.class, 1, Integer.MAX_VALUE));
+        }
+
+        /**
+         * See {@link #defineListAllowEmpty(List, Supplier, Supplier, Predicate)} for details.<p>
+         * 
+         * This variant takes its key as a string and splits it on ".".<br>
+         * This variant takes its default value directly and wraps it in a supplier.<br>
+         * This variant has no supplier for new elements, so no new elements can be added in the config UI.
+         * 
+         * @deprecated Use {@link #defineListAllowEmpty(String, List, Supplier, Predicate)}
+         */
+        @Deprecated
         public <T> ConfigValue<List<? extends T>> defineListAllowEmpty(String path, List<? extends T> defaultValue, Predicate<Object> elementValidator) {
             return defineListAllowEmpty(split(path), defaultValue, elementValidator);
         }
 
+        /**
+         * See {@link #defineListAllowEmpty(List, Supplier, Supplier, Predicate)} for details.<p>
+         * 
+         * This variant takes its key as a string and splits it on ".".<br>
+         * This variant takes its default value directly and wraps it in a supplier.
+         * 
+         */
+        public <T> ConfigValue<List<? extends T>> defineListAllowEmpty(String path, List<? extends T> defaultValue, Supplier<T> newElementSupplier, Predicate<Object> elementValidator) {
+            return defineListAllowEmpty(split(path), defaultValue, newElementSupplier, elementValidator);
+        }
+
+        /**
+         * See {@link #defineListAllowEmpty(List, Supplier, Supplier, Predicate)} for details.<p>
+         * 
+         * This variant takes its key as a string and splits it on ".".<br>
+         * This variant has no supplier for new elements, so no new elements can be added in the config UI.
+         * 
+         * @deprecated Use {@link #defineListAllowEmpty(String, Supplier, Supplier, Predicate)}
+         */
+        @Deprecated
         public <T> ConfigValue<List<? extends T>> defineListAllowEmpty(String path, Supplier<List<? extends T>> defaultSupplier, Predicate<Object> elementValidator) {
             return defineListAllowEmpty(split(path), defaultSupplier, elementValidator);
         }
 
+        /**
+         * See {@link #defineListAllowEmpty(List, Supplier, Supplier, Predicate)} for details.<p>
+         * 
+         * This variant takes its key as a string and splits it on ".".
+         * 
+         */
+        public <T> ConfigValue<List<? extends T>> defineListAllowEmpty(String path, Supplier<List<? extends T>> defaultSupplier, Supplier<T> newElementSupplier, Predicate<Object> elementValidator) {
+            return defineListAllowEmpty(split(path), defaultSupplier, newElementSupplier, elementValidator);
+        }
+
+        /**
+         * See {@link #defineListAllowEmpty(List, Supplier, Supplier, Predicate)} for details.<p>
+         * 
+         * This variant takes its default value directly and wraps it in a supplier.<br>
+         * This variant has no supplier for new elements, so no new elements can be added in the config UI.
+         * 
+         * @deprecated Use {@link #defineListAllowEmpty(List, List, Supplier, Predicate)}
+         */
+        @Deprecated
         public <T> ConfigValue<List<? extends T>> defineListAllowEmpty(List<String> path, List<? extends T> defaultValue, Predicate<Object> elementValidator) {
             return defineListAllowEmpty(path, () -> defaultValue, elementValidator);
         }
 
+        /**
+         * See {@link #defineListAllowEmpty(List, Supplier, Supplier, Predicate)} for details.<p>
+         * 
+         * This variant takes its default value directly and wraps it in a supplier.
+         * 
+         */
+        public <T> ConfigValue<List<? extends T>> defineListAllowEmpty(List<String> path, List<? extends T> defaultValue, Supplier<T> newElementSupplier, Predicate<Object> elementValidator) {
+            return defineListAllowEmpty(path, () -> defaultValue, newElementSupplier, elementValidator);
+        }
+
+        /**
+         * See {@link #defineListAllowEmpty(List, Supplier, Supplier, Predicate)} for details.<p>
+         * 
+         * This variant has no supplier for new elements, so no new elements can be added in the config UI.
+         * 
+         * @deprecated Use {@link #defineListAllowEmpty(List, Supplier, Supplier, Predicate)}
+         */
+        @Deprecated
         public <T> ConfigValue<List<? extends T>> defineListAllowEmpty(List<String> path, Supplier<List<? extends T>> defaultSupplier, Predicate<Object> elementValidator) {
+            return defineListAllowEmpty(path, defaultSupplier, null, elementValidator);
+        }
+
+        /**
+         * Build a new config value that holds a {@link List}.<p>
+         * 
+         * This list can be empty. See also {@link #defineList(List, Supplier, Supplier, Predicate, Range)} for more control over the list size.
+         * 
+         * @param <T>                The class of element of the list. Directly supported are {@link String}, {@link Boolean}, {@link Integer}, {@link Long} and {@link Double}.
+         *                           Other classes will be saved using their string representation and will be read back from the config file as strings.
+         * @param path               The key for the config value in list form, i.e. pre-split into section and key.
+         * @param defaultSupplier    A {@link Supplier} for the default value of the list. This will be used if the config file doesn't exist or if it reads as invalid.
+         * @param newElementSupplier A {@link Supplier} for new elements to be added to the list. This is only used in the UI when the user presses the "add" button.
+         *                           The supplied value doesn't have to validate as correct, but it should provide a good starting point for the user to make it correct.
+         *                           If this parameter is null, there will be no "add" button in the UI (if the default UI is used).
+         * @param elementValidator   A {@link Predicate} to verify if a list element is valid. Elements that are read from the config file are removed from the list if the
+         *                           validator rejects them.
+         * @return A {@link ConfigValue} object that can be used to access the config value and that will live-update if the value changed, i.e. because the config file
+         *         was updated or the config UI was used.
+         */
+        public <T> ConfigValue<List<? extends T>> defineListAllowEmpty(List<String> path, Supplier<List<? extends T>> defaultSupplier, Supplier<T> newElementSupplier, Predicate<Object> elementValidator) {
+            return defineList(path, defaultSupplier, newElementSupplier, elementValidator, null);
+        }
+
+        /**
+         * Build a new config value that holds a {@link List}.<p>
+         * 
+         * @param <T>                The class of element of the list. Directly supported are {@link String}, {@link Boolean}, {@link Integer}, {@link Long} and {@link Double}.
+         *                           Other classes will be saved using their string representation and will be read back from the config file as strings.
+         * @param path               The key for the config value in list form, i.e. pre-split into section and key.
+         * @param defaultSupplier    A {@link Supplier} for the default value of the list. This will be used if the config file doesn't exist or if it reads as invalid.
+         * @param newElementSupplier A {@link Supplier} for new elements to be added to the list. This is only used in the UI when the user presses the "add" button.
+         *                           The supplied value doesn't have to validate as correct, but it should provide a good starting point for the user to make it correct.
+         *                           If this parameter is null, there will be no "add" button in the UI (if the default UI is used).
+         * @param elementValidator   A {@link Predicate} to verify if a list element is valid. Elements that are read from the config file are removed from the list if the
+         *                           validator rejects them.
+         * @param sizeRange          A {@link Range} defining the valid length of the list. Lists read from the config file that don't validate with this Range will be replaced
+         *                           with the default.
+         * @return A {@link ConfigValue} object that can be used to access the config value and that will live-update if the value changed, i.e. because the config file
+         *         was updated or the config UI was used.
+         */
+        public <T> ConfigValue<List<? extends T>> defineList(List<String> path, Supplier<List<? extends T>> defaultSupplier, @Nullable Supplier<T> newElementSupplier, Predicate<Object> elementValidator, Range<Integer> sizeRange) {
             context.setClazz(List.class);
-            return define(path, new ValueSpec(defaultSupplier, x -> x instanceof List && ((List<?>) x).stream().allMatch(elementValidator), context, path) {
+            return define(path, new ListValueSpec(defaultSupplier, newElementSupplier, x -> x instanceof List && ((List<?>) x).stream().allMatch(elementValidator), elementValidator, context, path, sizeRange) {
                 @Override
                 public Object correct(Object value) {
-                    if (value == null || !(value instanceof List)) {
-                        LOGGER.debug(Logging.CORE, "List on key {} is deemed to need correction, as it is null or not a list.", path.get(path.size() - 1));
+                    if (!(value instanceof List) || (getSizeRange() != null && !getSizeRange().test(((List<?>) value).size()))) {
+                        LOGGER.debug(Logging.CORE, "List on key {} is deemed to need correction, as it is null, not a list, or the wrong size.", path.getLast());
                         return getDefault();
                     }
                     List<?> list = Lists.newArrayList((List<?>) value);
                     list.removeIf(elementValidator.negate());
                     if (list.isEmpty()) {
-                        LOGGER.debug(Logging.CORE, "List on key {} is deemed to need correction. It failed validation.", path.get(path.size() - 1));
+                        LOGGER.debug(Logging.CORE, "List on key {} is deemed to need correction. It failed validation.", path.getLast());
                         return getDefault();
                     }
                     return list;
@@ -601,8 +823,20 @@ public class ModConfigSpec extends UnmodifiableConfigWrapper<UnmodifiableConfig>
             return this;
         }
 
+        /**
+         * Config values marked as needing a world restart will not reset their {@linkplain ConfigValue#get() cached value} until they are unloaded
+         * (i.e. when a world is closed).
+         */
         public Builder worldRestart() {
             context.worldRestart();
+            return this;
+        }
+
+        /**
+         * Config values marked as needing a game restart will never reset their {@linkplain ConfigValue#get() cached value}.
+         */
+        public Builder gameRestart() {
+            context.gameRestart();
             return this;
         }
 
@@ -646,21 +880,20 @@ public class ModConfigSpec extends UnmodifiableConfigWrapper<UnmodifiableConfig>
             Config valueCfg = Config.of(Config.getDefaultMapCreator(true, true), InMemoryFormat.withSupport(ConfigValue.class::isAssignableFrom));
             values.forEach(v -> valueCfg.set(v.getPath(), v));
 
-            ModConfigSpec ret = new ModConfigSpec(storage, valueCfg, levelComments, levelTranslationKeys);
+            ModConfigSpec ret = new ModConfigSpec(spec.unmodifiable(), valueCfg.unmodifiable(), Collections.unmodifiableMap(levelComments), Collections.unmodifiableMap(levelTranslationKeys));
             values.forEach(v -> v.spec = ret);
             return ret;
-        }
-
-        public interface BuilderConsumer {
-            void accept(Builder builder);
         }
     }
 
     private static class BuilderContext {
         private final List<String> comment = new LinkedList<>();
+        @Nullable
         private String langKey;
+        @Nullable
         private Range<?> range;
-        private boolean worldRestart = false;
+        private RestartType restartType = RestartType.NONE;
+        @Nullable
         private Class<?> clazz;
 
         public void addComment(String value) {
@@ -696,10 +929,11 @@ public class ModConfigSpec extends UnmodifiableConfigWrapper<UnmodifiableConfig>
             return LINE_JOINER.join(comment);
         }
 
-        public void setTranslationKey(String value) {
+        public void setTranslationKey(@Nullable String value) {
             this.langKey = value;
         }
 
+        @Nullable
         public String getTranslationKey() {
             return this.langKey;
         }
@@ -709,23 +943,29 @@ public class ModConfigSpec extends UnmodifiableConfigWrapper<UnmodifiableConfig>
             this.setClazz(value.getClazz());
         }
 
+        @Nullable
         @SuppressWarnings("unchecked")
         public <V extends Comparable<? super V>> Range<V> getRange() {
             return (Range<V>) this.range;
         }
 
         public void worldRestart() {
-            this.worldRestart = true;
+            this.restartType = RestartType.WORLD;
         }
 
-        public boolean needsWorldRestart() {
-            return this.worldRestart;
+        public void gameRestart() {
+            this.restartType = RestartType.GAME;
+        }
+
+        public RestartType restartType() {
+            return restartType;
         }
 
         public void setClazz(Class<?> clazz) {
             this.clazz = clazz;
         }
 
+        @Nullable
         public Class<?> getClazz() {
             return this.clazz;
         }
@@ -734,10 +974,10 @@ public class ModConfigSpec extends UnmodifiableConfigWrapper<UnmodifiableConfig>
             validate(hasComment(), "Non-empty comment when empty expected");
             validate(langKey, "Non-null translation key when null expected");
             validate(range, "Non-null range when null expected");
-            validate(worldRestart, "Dangeling world restart value set to true");
+            validate(restartType != RestartType.NONE, "Dangling restart value set to " + restartType);
         }
 
-        private void validate(Object value, String message) {
+        private void validate(@Nullable Object value, String message) {
             if (value != null)
                 throw new IllegalStateException(message);
         }
@@ -772,7 +1012,7 @@ public class ModConfigSpec extends UnmodifiableConfigWrapper<UnmodifiableConfig>
             return max;
         }
 
-        private boolean isNumber(Object other) {
+        private boolean isNumber(@Nullable Object other) {
             return Number.class.isAssignableFrom(clazz) && other instanceof Number;
         }
 
@@ -796,7 +1036,7 @@ public class ModConfigSpec extends UnmodifiableConfigWrapper<UnmodifiableConfig>
             return result;
         }
 
-        public Object correct(Object value, Object def) {
+        public Object correct(@Nullable Object value, Object def) {
             if (isNumber(value)) {
                 Number n = (Number) value;
                 return n.doubleValue() < ((Number) min).doubleValue() ? min : n.doubleValue() > ((Number) max).doubleValue() ? max : value;
@@ -820,13 +1060,17 @@ public class ModConfigSpec extends UnmodifiableConfigWrapper<UnmodifiableConfig>
     }
 
     public static class ValueSpec {
+        @Nullable
         private final String comment;
+        @Nullable
         private final String langKey;
+        @Nullable
         private final Range<?> range;
-        private final boolean worldRestart;
+        @Nullable
         private final Class<?> clazz;
         private final Supplier<?> supplier;
         private final Predicate<Object> validator;
+        private final RestartType restartType;
 
         private ValueSpec(Supplier<?> supplier, Predicate<Object> validator, BuilderContext context, List<String> path) {
             Objects.requireNonNull(supplier, "Default supplier can not be null");
@@ -835,38 +1079,42 @@ public class ModConfigSpec extends UnmodifiableConfigWrapper<UnmodifiableConfig>
             this.comment = context.hasComment() ? context.buildComment(path) : null;
             this.langKey = context.getTranslationKey();
             this.range = context.getRange();
-            this.worldRestart = context.needsWorldRestart();
+            this.restartType = context.restartType();
             this.clazz = context.getClazz();
             this.supplier = supplier;
             this.validator = validator;
         }
 
+        @Nullable
         public String getComment() {
             return comment;
         }
 
+        @Nullable
         public String getTranslationKey() {
             return langKey;
         }
 
+        @Nullable
         @SuppressWarnings("unchecked")
         public <V extends Comparable<? super V>> Range<V> getRange() {
             return (Range<V>) this.range;
         }
 
-        public boolean needsWorldRestart() {
-            return this.worldRestart;
+        public RestartType restartType() {
+            return restartType;
         }
 
+        @Nullable
         public Class<?> getClazz() {
             return this.clazz;
         }
 
-        public boolean test(Object value) {
+        public boolean test(@Nullable Object value) {
             return validator.test(value);
         }
 
-        public Object correct(Object value) {
+        public Object correct(@Nullable Object value) {
             return range == null ? getDefault() : range.correct(value, getDefault());
         }
 
@@ -875,15 +1123,68 @@ public class ModConfigSpec extends UnmodifiableConfigWrapper<UnmodifiableConfig>
         }
     }
 
-    public static class ConfigValue<T> implements Supplier<T> {
-        private static boolean USE_CACHES = true;
+    public static class ListValueSpec extends ValueSpec {
+        private static final Range<Integer> MAX_ELEMENTS = new Range<>(Integer.class, 0, Integer.MAX_VALUE);
 
+        @Nullable
+        private final Supplier<?> newElementSupplier;
+        @Nullable
+        private final Range<Integer> sizeRange;
+        private final Predicate<Object> elementValidator;
+
+        private ListValueSpec(Supplier<?> supplier, @Nullable Supplier<?> newElementSupplier, Predicate<Object> listValidator, Predicate<Object> elementValidator, BuilderContext context, List<String> path, @Nullable Range<Integer> sizeRange) {
+            super(supplier, listValidator, context, path);
+            Objects.requireNonNull(elementValidator, "ElementValidator can not be null");
+
+            this.newElementSupplier = newElementSupplier;
+            this.elementValidator = elementValidator;
+            this.sizeRange = Objects.requireNonNullElse(sizeRange, MAX_ELEMENTS);
+        }
+
+        /**
+         * Creates a new empty element that can be added to the end of the list or null if the list doesn't support adding elements.<p>
+         * 
+         * The element does not need to validate with either {@link #test(Object)} or {@link #testElement(Object)}, but it should give the user a good starting point for their edit.<p>
+         * 
+         * Only used by the UI!
+         */
+        @Nullable
+        public Supplier<?> getNewElementSupplier() {
+            return newElementSupplier;
+        }
+
+        /**
+         * Determines if a given object can be part of the list.<p>
+         * 
+         * Note that the list-level validator overrules this.<p>
+         * 
+         * Only used by the UI!
+         */
+        public boolean testElement(Object value) {
+            return elementValidator.test(value);
+        }
+
+        /**
+         * The allowable range of the size of the list.
+         * <p>
+         * Note that the validator overrules this.
+         * <p>
+         * Only used by the UI!
+         */
+        public Range<Integer> getSizeRange() {
+            return sizeRange;
+        }
+    }
+
+    public static class ConfigValue<T> implements Supplier<T> {
         private final Builder parent;
         private final List<String> path;
         private final Supplier<T> defaultSupplier;
 
+        @Nullable
         private T cachedValue = null;
 
+        @Nullable
         private ModConfigSpec spec;
 
         ConfigValue(Builder parent, List<String> path, Supplier<T> defaultSupplier) {
@@ -898,39 +1199,37 @@ public class ModConfigSpec extends UnmodifiableConfigWrapper<UnmodifiableConfig>
         }
 
         /**
-         * Returns the actual value for the configuration setting, throwing if the config has not yet been loaded.
+         * Returns the configured value for the configuration setting, throwing if the config has not yet been loaded.
+         * <p>
+         * This getter is cached, and will respect the {@link Builder#worldRestart() world restart} and {@link Builder#gameRestart() game restart}
+         * options by not clearing its cache if one of those options are set.
          *
-         * @return the actual value for the setting
+         * @return the configured value for the setting
          * @throws NullPointerException  if the {@link ModConfigSpec config spec} object that will contain this has
          *                               not yet been built
          * @throws IllegalStateException if the associated config has not yet been loaded
          */
         @Override
         public T get() {
-            Preconditions.checkNotNull(spec, "Cannot get config value before spec is built");
-            // TODO: Remove this dev-time check so this errors out on both production and dev
-            // This is dev-time-only in 1.19.x, to avoid breaking already published mods while forcing devs to fix their errors
-            if (!FMLEnvironment.production) {
-                // When the above if-check is removed, change message to "Cannot get config value before config is loaded"
-                Preconditions.checkState(spec.childConfig != null, """
-                        Cannot get config value before config is loaded.
-                        This error is currently only thrown in the development environment, to avoid breaking published mods.
-                        In a future version, this will also throw in the production environment.
-                        """);
+            if (cachedValue == null) {
+                cachedValue = getRaw();
             }
-
-            if (spec.childConfig == null)
-                return defaultSupplier.get();
-
-            if (USE_CACHES && cachedValue == null)
-                cachedValue = getRaw(spec.childConfig, path, defaultSupplier);
-            else if (!USE_CACHES)
-                return getRaw(spec.childConfig, path, defaultSupplier);
-
             return cachedValue;
         }
 
-        protected T getRaw(Config config, List<String> path, Supplier<T> defaultSupplier) {
+        /**
+         * Returns the uncached value for the configuration setting, throwing if the config has not yet been loaded.
+         * <p>
+         * <em>Do not call this for any other purpose than editing the value. Use {@link #get()} instead.</em>
+         */
+        public T getRaw() {
+            Preconditions.checkNotNull(spec, "Cannot get config value before spec is built");
+            var loadedConfig = spec.loadedConfig;
+            Preconditions.checkState(loadedConfig != null, "Cannot get config value before config is loaded.");
+            return getRaw(loadedConfig.config(), path, defaultSupplier);
+        }
+
+        public T getRaw(Config config, List<String> path, Supplier<T> defaultSupplier) {
             return config.getOrElse(path, defaultSupplier);
         }
 
@@ -947,15 +1246,27 @@ public class ModConfigSpec extends UnmodifiableConfigWrapper<UnmodifiableConfig>
 
         public void save() {
             Preconditions.checkNotNull(spec, "Cannot save config value before spec is built");
-            Preconditions.checkNotNull(spec.childConfig, "Cannot save config value without assigned Config object present");
+            Preconditions.checkNotNull(spec.loadedConfig, "Cannot save config value without assigned Config object present");
             spec.save();
         }
 
+        /**
+         * Directly sets the value, without firing events or writing the config to disk.
+         * Make sure to call {@link ModConfigSpec#save()} eventually.
+         */
         public void set(T value) {
             Preconditions.checkNotNull(spec, "Cannot set config value before spec is built");
-            Preconditions.checkNotNull(spec.childConfig, "Cannot set config value without assigned Config object present");
-            spec.childConfig.set(path, value);
-            this.cachedValue = value;
+            var loadedConfig = spec.loadedConfig;
+            Preconditions.checkNotNull(loadedConfig, "Cannot set config value without assigned Config object present");
+            loadedConfig.config().set(path, value);
+
+            if (getSpec().restartType == RestartType.NONE) {
+                this.cachedValue = value;
+            }
+        }
+
+        public ValueSpec getSpec() {
+            return parent.spec.get(path);
         }
 
         public void clearCache() {
@@ -988,7 +1299,7 @@ public class ModConfigSpec extends UnmodifiableConfigWrapper<UnmodifiableConfig>
         }
 
         @Override
-        protected Integer getRaw(Config config, List<String> path, Supplier<Integer> defaultSupplier) {
+        public Integer getRaw(Config config, List<String> path, Supplier<Integer> defaultSupplier) {
             return config.getIntOrElse(path, () -> defaultSupplier.get());
         }
 
@@ -1004,7 +1315,7 @@ public class ModConfigSpec extends UnmodifiableConfigWrapper<UnmodifiableConfig>
         }
 
         @Override
-        protected Long getRaw(Config config, List<String> path, Supplier<Long> defaultSupplier) {
+        public Long getRaw(Config config, List<String> path, Supplier<Long> defaultSupplier) {
             return config.getLongOrElse(path, () -> defaultSupplier.get());
         }
 
@@ -1020,7 +1331,7 @@ public class ModConfigSpec extends UnmodifiableConfigWrapper<UnmodifiableConfig>
         }
 
         @Override
-        protected Double getRaw(Config config, List<String> path, Supplier<Double> defaultSupplier) {
+        public Double getRaw(Config config, List<String> path, Supplier<Double> defaultSupplier) {
             Number n = config.<Number>get(path);
             return n == null ? defaultSupplier.get() : n.doubleValue();
         }
@@ -1042,7 +1353,7 @@ public class ModConfigSpec extends UnmodifiableConfigWrapper<UnmodifiableConfig>
         }
 
         @Override
-        protected T getRaw(Config config, List<String> path, Supplier<T> defaultSupplier) {
+        public T getRaw(Config config, List<String> path, Supplier<T> defaultSupplier) {
             return config.getEnumOrElse(path, clazz, converter, defaultSupplier);
         }
     }
@@ -1053,5 +1364,40 @@ public class ModConfigSpec extends UnmodifiableConfigWrapper<UnmodifiableConfig>
 
     private static List<String> split(String path) {
         return Lists.newArrayList(DOT_SPLITTER.split(path));
+    }
+
+    /**
+     * Used to prevent cached config values from being updated unless the game or the world is restarted.
+     */
+    public enum RestartType {
+        /**
+         * Do not require a restart to update the cached config value.
+         */
+        NONE,
+        /**
+         * Require a world restart.
+         */
+        WORLD,
+        /**
+         * Require a game restart.
+         * <p>
+         * Cannot be used for {@linkplain ModConfig.Type#SERVER server configs}.
+         */
+        GAME(ModConfig.Type.SERVER);
+
+        private final Set<ModConfig.Type> invalidTypes;
+
+        RestartType(ModConfig.Type... invalidTypes) {
+            this.invalidTypes = EnumSet.noneOf(ModConfig.Type.class);
+            this.invalidTypes.addAll(Arrays.asList(invalidTypes));
+        }
+
+        private boolean isValid(ModConfig.Type type) {
+            return !invalidTypes.contains(type);
+        }
+
+        public RestartType with(RestartType other) {
+            return other == NONE ? this : (other == GAME || this == GAME) ? GAME : WORLD;
+        }
     }
 }
